# ws_lift

./: .gitignore  .gitmodules  pyproject.toml
data/1st_floor/: map_dahei.yaml  mark.json  task.json
data/3rd_floor/: map_dahei.yaml  mark.json  task.json
docs/: README.md  机器人物联电梯接口装置通信协议.docx
src/bridgex/: CMakeLists.txt  package.xml
src/bridgex/launch/: bridgex_agv.launch  bridgex_lite.launch  bridgex_m20.launch  bridgex_simu.launch  bridgex_x30.launch
src/bridgex/src/: bridgex.cpp  bridgex.h
src/bridgex/src/ex/: ex_client.cpp  ex_client.h  file_storage.cpp  file_storage.h
src/bridgex/src/ex/cam/: camera.cpp  camera.h
src/bridgex/src/ex/map/: bag_recording_api.cpp  bag_recording_api.h  mapping_api.cpp  mapping_api.h
src/bridgex/src/ex/robot/: agv_controller.cpp  agv_controller.h  lite3_controller.cpp  lite3_controller.h  m20_controller.cpp  m20_controller.h
src/bridgex/src/ex/task/: task_manager.cpp  task_manager.h
src/bridgex/src/message/: amclpose_message.cpp  amclpose_message.h  cmd_vel_message.cpp  cmd_vel_message.h  imu_message.cpp  imu_message.h  loc_message.cpp  loc_message.h
src/bridgex/src/zmq/: message_base.cpp  message_base.h  message_manager.cpp  message_manager.h
src/lift_comm/: CMakeLists.txt  package.xml
src/lift_comm/launch/: lift_controller.launch
src/lift_comm/src/: elevator_control.py  lift_controller.py
src/lift_comm/srv/: Hodor.srv  LiftCall.srv  StateInquiry.srv
